20210501 - Gnoga V1.6a:

- Update Makefile, settings.gpr and HISTORY.


20210425 - Gnoga V1.6-beta:

- Layout test SSL program: adaptation to GNAT Community 2020.
- Demo test program: avoid replacing of Main_Window.View by Collection_View to avoid finalization of Console
  and then exception when resizing.
- Storage test program: fix life time of View to avoid exception when resizing.
- Fix "PROGRAM_ERROR : accessibility check failed" from previous wrong changes adapting to GNAT Community 2020.

20191222 - Gnoga V1.6-alpha:

- Gnoga: adaptation to PIXI 5.3.0.
- Upgrade to PIXI 5.3.0.
- Upgrade to ACE 1.4.12.
- Upgrade to Simple Components 4.50.
- Update Jeff Carter's Pragmarc from Github.
- Gnoga: adaptation to GNAT Community 2020.
- JQuery Javascript source upgrade version 3.5.0.
- Add experimental package UXStrings (see readme).
- Demo: add a simple localization tool (Localize) to help edition of localization files.
- Form: add additional support for file input with multiple files. Change some API.
- Add support for files upload (implementing Javascript FileReader).
- Form: add support for file and tel field types. Fix UTF8 character conversions in form names.


20191222 - Gnoga V1.5a:

- Update Makefile, TODO, README, TIPS and more.


20191111 - Gnoga V1.5-beta:

- Avoid some memory leaks.
- Fix exception in CLI test
- Check only specifications with AdaControl.


20190824 - Gnoga V1.5-alpha:

- Fix to avoid SYSTEM.ASSERTIONS.ASSERT_FAILURE : Position cursor of Next is bad
- Add support for localhost in Initialize for singleton and multi-connect app according to code comments.
- Upgrade to Simple Components 4.41
- Update Jeff Carter's Pragmarc and demos from Github
- Fix for GNAT Community 2019.
- Upgrade to Simple Components 4.40
- Canvas: add additional binding to drawImage
- PIXI.Sprite: recursive rendering of sprite's children.
- PIXI.Sprite: modification for finalizing children