@@ -35,3 +35,6 @@ demo/logo/logo_messages-logo_strings.adb
 demo/logo/logo_messages-logo_strings.ads
 demo/logo/logo_messages.adb
 demo/logo/logo_messages.ads
+
+/alire/
+/config/
