@@ -18,6 +18,7 @@ http://www.gnoga.com or use git to get the latest development version:
 ```
 git clone git://git.code.sf.net/p/gnoga/code gnoga-code
 cd gnoga-code
+git checkout dev_1.6
 make help # for all options and configuration values
 make all
 ```
@@ -28,7 +29,7 @@ Open a web browser with URL like: "http://127.0.0.1:8080".
 See INSTALL for more information about installing Gnoga as a standard gcc/ada
 library if desired.
 
-GNAT Programming Studio (GPS) is available with 'make gps' which launch GPS with the
+GNAT Programming Studio (GPS) is available with 'make studio' which launch GPS with the
 actual values of compiler switches for gnoga.gpr project.
 For the demos: open in GPS the demo/demo_agg.gpr project.
 For the tests: open in GPS the test/test_agg.gpr project.
@@ -41,7 +42,20 @@ See deps/simple_components/components.htm for details.
 It includes an incredible wealth of Ada components you can incorporate in your software freely and
 is under the GMGPLv2.
 
-Here is an overview of Gnoga's framework:
+## Using Alire
+
+In your own [Alire](https://alire.ada.dev) project, add Gnoga dependency:
+
+`% alr with gnoga`
+
+Then you can import the Ada Gnoga packages in your programs and GPR projects:
+
+`with "lib_gnoga.gpr";`
+
+Note: Alire will take care of dependencies.
+
+
+## Here is an overview of Gnoga's framework
 
 1. The communication platform between the Ada code and the browser / native
       Gnoga.Server.Connection
